Update page title to "Medic" in index.html and Navbar.jsx

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -103,7 +103,7 @@
       rel="manifest"
       href="/site.webmanifest"
     />
-    <title>HealthBooker</title>
+    <title>Medic</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
